--- a/server/lib/config.ini
+++ b/server/lib/config.ini
@@ -1,8 +1,8 @@
 [DB]
 host = localhost
 port = 3306
-username = work
-password = slanissue
+username = root
+password = 
 database = db_stockcat
 charset = utf8
 
