--- a/server/lib/fetch.ini
+++ b/server/lib/fetch.ini
@@ -1,3 +1,6 @@
+[LOG]
+conf = log.conf
+
 [DB]
 host = localhost
 port = 3306
@@ -12,4 +15,9 @@ port = 6379
 
 [FETCH]
 interval = 120
-hushen = test.json
+#hushen = hushen_test.json
+hushen = hushen.json
+
+[POLICY]
+close_time = 153000
+config = policy.json
