modified:   server/lib/config.ini 	modified:   server/lib/daily_policy.py 	modified:   server/lib/daily_refresh.py 	modified:   server/lib/fetch.ini 	modified:   server/lib/fetch.py 	modified:   server/lib/fetch_worker.py 	modified:   server/lib/hushen.json 	modified:   server/lib/log.conf 	modified:   server/lib/parrel_func.py 	modified:   server/lib/policy.json 	modified:   server/lib/policy_manager.py 	modified:   server/lib/policy_util.py 	modified:   server/lib/realtime_analyzer.py 	modified:   server/lib/stock_analyzer.py 	modified:   server/lib/stock_util.py 	modified:   server/lib/ts_policy.py 	modified:   server/script/daily_start.sh 	modified:   server/script/del_key.sh 	modified:   server/script/fetch_daily.sh 	modified:   server/script/refresh_hist.sh 	modified:   spider/stock/fetch.sh 	modified:   spider/stock/stock/spiders/qq.py 	modified:   web/commands/ImportStockCommand.php 	modified:   web/components/CommonUtil.php 	modified:   web/components/DataModel.php 	modified:   web/components/StockUtil.php 	modified:   web/components/TrendHelper.php 	modified:   web/data/stock_list.txt 	modified:   web/modules/stock/controllers/ApiController.php 	modified:   web/modules/stock/controllers/PoolController.php 	modified:   web/views/layouts/main.php

--- a/server/lib/config.ini
+++ b/server/lib/config.ini
@@ -1,8 +1,8 @@
 [DB]
 host = localhost
 port = 3306
-username = root
-password = 
+username = work
+password = slanissue
 database = db_stockcat
 charset = utf8
 
