--- a/server/lib/log.conf
+++ b/server/lib/log.conf
@@ -11,7 +11,7 @@ keys=common,simple
 handlers=consolehandler
 
 [logger_fetch]
-level=DEBUG
+level=INFO
 handlers=filehandler
 qualname=fetch
 propagate=0
@@ -29,9 +29,9 @@ level=NOTSET
 args=(sys.stdout,)
 
 [handler_filehandler]
-class=FileHandler
+class=logging.handlers.RotatingFileHandler
 formatter=common
-args=('service.log', 'a')
+args=('/data/stockcat/service/service.log', 'a', 200000000, 5)
 
 [formatter_common]
 format=%(asctime)s %(threadName)s - %(thread)d %(filename)s[line:%(lineno)d] %(levelname)s %(message)s
