--- a/server/lib/fetch.ini
+++ b/server/lib/fetch.ini
@@ -14,9 +14,13 @@ host = 127.0.0.1
 port = 6379
 
 [FETCH]
+debug = 0
 interval = 120
-#hushen = hushen_test.json
-hushen = hushen.json
+
+[MARKET]
+#location_1 = hushen_test.json
+location_1 = hushen.json
+location_3 = us.json
 
 [POLICY]
 close_time = 153000
