通过配置选项支持dump daily/realtime的数据到日志文件

--- a/server/lib/log.conf
+++ b/server/lib/log.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,fetch,policy
+keys=root,fetch,policy,dump
 
 [handlers]
 keys=consolehandler, filehandler
@@ -22,6 +22,12 @@ handlers=filehandler
 qualname=policy
 propagate=0
 
+[logger_dump]
+level=INFO
+handlers=datahandler
+qualname=dump
+propagate=0
+
 [handler_consolehandler]
 class=StreamHandler
 formatter=simple
@@ -33,9 +39,15 @@ class=logging.handlers.RotatingFileHandler
 formatter=common
 args=('/data/stockcat/service/service.log', 'a', 200000000, 5)
 
+[handler_datahandler]
+class=logging.handlers.RotatingFileHandler
+formatter=simple
+args=('/data/stockcat/service/dump.log', 'a', 200000000, 5)
+
 [formatter_common]
 format=%(asctime)s %(threadName)s - %(thread)d %(filename)s[line:%(lineno)d] %(levelname)s %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
 
 [formatter_simple]
-format=[%(asctime)s](%(levelname)s)%(name)s : %(message)s
+format=[%(asctime)s] - %(message)s
+datefmt=%Y-%m-%d %H:%M:%S
