--- a/server/lib/log.conf
+++ b/server/lib/log.conf
@@ -2,7 +2,7 @@
 keys=root,fetch,policy,dump
 
 [handlers]
-keys=consolehandler, filehandler
+keys=consolehandler, filehandler, datahandler
 
 [formatters]
 keys=common,simple
