policy worker support us

--- a/server/lib/fetch.ini
+++ b/server/lib/fetch.ini
@@ -17,12 +17,12 @@ port = 6379
 debug = 0
 interval = 120
 
-[MARKET]
-#location_1 = hushen_test.json
-location_1 = hushen.json
-location_3 = us.json
-
-[POLICY]
+[CN]
 close_time = 153000
-#close_time = 233000
-config = policy.json
+scheduler = hushen.json
+policy = policy.json
+
+[US]
+close_time = 163000
+scheduler = us.json
+policy = us_policy.json
