--- a/server/lib/log.conf
+++ b/server/lib/log.conf
@@ -1,8 +1,8 @@
 [loggers]
-keys=root,fetch,policy,dump
+keys=root,fetch,policy,dump,order
 
 [handlers]
-keys=consolehandler, filehandler, datahandler
+keys=consolehandler, filehandler, datahandler, orderhandler
 
 [formatters]
 keys=common,simple
@@ -17,7 +17,7 @@ qualname=fetch
 propagate=0
 
 [logger_policy]
-level=INFO
+level=DEBUG
 handlers=filehandler
 qualname=policy
 propagate=0
@@ -26,6 +26,12 @@ propagate=0
 level=INFO
 handlers=datahandler
 qualname=dump
+propagate=0
+
+[logger_order]
+level=INFO
+handlers=orderhandler
+qualname=order
 propagate=0
 
 [handler_consolehandler]
@@ -43,6 +49,11 @@ args=('/data/stockcat/service/service.log', 'a', 200000000, 5)
 class=logging.handlers.RotatingFileHandler
 formatter=simple
 args=('/data/stockcat/service/dump.log', 'a', 200000000, 5)
+
+[handler_orderhandler]
+class=logging.handlers.RotatingFileHandler
+formatter=simple
+args=('/data/stockcat/service/order.log', 'a', 200000000, 5)
 
 [formatter_common]
 format=%(asctime)s %(threadName)s - %(thread)d %(filename)s[line:%(lineno)d] %(levelname)s %(message)s
