--- a/server/lib/log.conf
+++ b/server/lib/log.conf
@@ -2,7 +2,7 @@
 keys=root,fetch,policy,dump,order
 
 [handlers]
-keys=consolehandler, filehandler, datahandler, orderhandler
+keys=consolehandler, fetchhandler, filehandler, datahandler, orderhandler
 
 [formatters]
 keys=common,simple
@@ -12,7 +12,7 @@ handlers=consolehandler
 
 [logger_fetch]
 level=INFO
-handlers=filehandler
+handlers=fetchhandler
 qualname=fetch
 propagate=0
 
@@ -40,6 +40,11 @@ formatter=simple
 level=NOTSET
 args=(sys.stdout,)
 
+[handler_fetchhandler]
+class=logging.handlers.RotatingFileHandler
+formatter=common
+args=('/data/stockcat/service/fetch.log', 'a', 200000000, 5)
+
 [handler_filehandler]
 class=logging.handlers.RotatingFileHandler
 formatter=common
@@ -52,7 +57,7 @@ args=('/data/stockcat/service/dump.log', 'a', 200000000, 5)
 
 [handler_orderhandler]
 class=logging.handlers.RotatingFileHandler
-formatter=simple
+formatter=common
 args=('/data/stockcat/service/order.log', 'a', 200000000, 5)
 
 [formatter_common]
