--- a/server/lib/config.ini
+++ b/server/lib/config.ini
@@ -1,3 +1,6 @@
+[LOG]                                                                                                                                                               
+conf = log.conf
+
 [DB]
 host = localhost
 port = 3306
